[tool.poetry]
name = "yoyo-metrics"
version = "1.0"
description = "Library to send metrics using different backends."
authors = ["Yoyo <dev@yoyowallet.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
datadog = "0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
